<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ares Controller</string>
    <string name="Volumes">Volumes</string>
    <string name="Overall">Overall:</string>
    <string name="Music">Music:       </string>
    <string name="Sounds">Sounds:</string>
    <string name="Status">Status</string>
    <string name="Project">Project:</string>
    <string name="Empty"></string>
    <string name="Mode">Mode:</string>
    <string name="Elements">Elements:</string>
    <string name="Network">Network</string>
    <string name="Server">Server:</string>
    <string name="NetworkLabel">Network:</string>
    <string name="ShowModes">Modes…</string>
    <string name="Connect">Connect With Player…</string>
    <string name="Disconnect">Disconnect</string>
    <string name="About">About…</string>
    <string name="OpenProject">Open Project…</string>
    <string name="open">Open</string>
    <string name="connected_with">Connected with %s</string>
    <string name="disconnected">Not connected</string>
    <string name="aboutInfo">ARES Controller\nVersion %s</string>
    <string name="no_player">No Player found. Is there a network problem?</string>
    <string name="select_player">Select a Player</string>
    <string name="show_main">Main Control</string>
    <string name="points">…</string>
    <string name="udp_port">Player UDP Port</string>
    <string name="volume_keys">Volume Keys</string>
    <string name="volume_keys_summary">Action to take for volume keys</string>
    <string-array name="volume_keys_values">
        <item>None</item>
        <item>Overall</item>
        <item>Music</item>
        <item>Sounds</item>
    </string-array>
    <string-array name="volume_keys_entries">
        <item>None (change volume on device)</item>
        <item>Change overall volume</item>
        <item>Change music volume</item>
        <item>Change sounds volume</item>
    </string-array>
    <string name="invalid_udp_port">%s is not a valid UDP port number.</string>
    <string name="preferences">Settings</string>
    <string-array name="message_level_values">
        <item>Error</item>
        <item>Warning</item>
        <item>Info</item>
        <item>Debug</item>
    </string-array>
    <string-array name="message_level_entries">
        <item>Error</item>
        <item>Warning</item>
        <item>Info</item>
        <item>Debug</item>
    </string-array>
    <string name="message_level">Message Level</string>
    <string name="message_level_summary">Message popup filter</string>
    <string name="modes">Modes</string>
    <string name="player_connection">Player Connection</string>
    <string name="invalid_player_connection_format">Invalid format for Player connection!\nMust be name,port,ipaddress (or auto).</string>
    <string name="connectFirst">- (connect with Player first)</string>
    <string name="no_music_list">No Music List Playing</string>
    <string name="musicList">Music List</string>
    <string name="file_system">File System</string>
    <string name="dropbox">Dropbox</string>
    <string name="no_mode">No mode (no project loaded)</string>
    <string name="musicTags">Music Tags</string>
    <string name="Category">Category:</string>
    <string name="CategoryOperatorIsAnd">AND: Music must have a tag in ALL categories</string>
    <string name="ClearTags">Clear music tags</string>
    <string name="CategoryOperatorDesc">Combination of different categories by:</string>
    <string name="CategoryOperatorIsOr">OR: Music must have at least one tag in ANY category</string>
    <string name="SelectProject">Select Project:</string>
    <string name="NoProjects">There are currently no projects available for the Player.</string>
    <string name="tagMusic">Select music through tags</string>
    <string name="WebController">Web Controller</string>
    <string-array name="tag_categories_values">
        <item >or</item>
        <item >and</item>
        <item >globalAnd</item>
    </string-array>
    <string-array name="tag_categories_entries">
        <item >OR: needs at least one tag in ANY category</item>
        <item >Category-AND: needs at least one tag in ALL categories</item>
        <item >AND: needs ALL tags in ALL categories</item>
    </string-array>
        <string name="tag_categories_op_title">Connection of categories</string>
        <string name="tag_categories_op_desc">Connect categories with OR or with AND</string>
        <string name="tag_fading_time">Fading Time</string>
        <string name="tag_fading_time_desc">Fading time between music titles</string>
        <string name="tagFadingOnChange">Fade only on tag changes</string>
        <string name="tagFadingOnChangeDesc">Fade only if music changes due to different tags</string>
        <string name="playerConnection">Connection to Player</string>
        <string name="playerConnectionDesc">Either \'auto\' or in format \'name,port,ipaddress\'</string>
        <string name="general">General</string>
        <string name="invalid_fading_time">Please enter a positive number &lt; 50000</string>
        <string name="MusicAllSpeakers">Music on all speakers</string>
        <string name="MusicAllSpeakersDesc">Play music on all available speakers</string>
        <string name="musicFadingOpTitle">Fading on manual change</string>
        <string name="musicFadingOpDesc">How to fade when music is changed manually</string>
        <string name="music_fading_time">Manual change fading time</string>
        <string name="music_fading_time_desc">Fading time when music is changed manually</string>
        <string-array name="music_fading_op_values">
            <item >noFading</item>
            <item >fading</item>
            <item >crossFading</item>
        </string-array>
        <string-array name="music_fading_op_entries">
            <item >No Fading</item>
            <item >Fade out, then in</item>
            <item >Crossfading</item>
        </string-array>
            <string name="playMusic">Playing Music</string>
        <string name="importing">Importing ...</string>
        <string name="start_local_player">Start local Player</string>
        <string name="start_local_player_summary">Automatically start locally installed Player</string>
</resources>
